--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+		"abetter/core": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -21,7 +22,8 @@
 	"extra": {
         "laravel": {
             "providers": [
-                "ABetter\\Component\\ServiceProvider"
+	            "ABetter\\Component\\ServiceProvider",
+				"ABetter\\Component\\BladeServiceProvider"
             ]
         }
     }
